# wurmkickflip

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.verifiers.json
contracts/: locomotion-v2.json
docs/: README.md  agent-handoff.md  architecture.md  asset-roadmap.md  backlog.md  evolution-lab.md  policy-contract.md  replay-artifacts.md  requirements.md
fixtures/: policy-snapshot.json  replay-artifact.json  scripted-rollout.json
scripts/: verify-bundle-budget.ts  verify-configs.ts  verify-env-metrics.ts  verify-evolution.ts  verify-gait-microscope.ts  verify-locomotion-policy.ts  verify-observation-parity.ts  verify-policy-contract.mjs  verify-policy-runtime.ts  verify-published-locomotion.ts  verify-replay-schema.ts  verify-simulation-performance.ts  (+8 more)
training/: LOCOMOTION_POLICY.md  STUNT_POLICY.md  pyproject.toml
training/seeds/: wurmkickflip_locomotion_four_solve_swap_1_3_summary_v3.json  wurmkickflip_locomotion_four_solve_swap_1_3_warm_start_v3.json  wurmkickflip_locomotion_head_leading_guarded_warm_start_v3.json  wurmkickflip_locomotion_head_leading_warm_start_v3.json  wurmkickflip_locomotion_terrarium_causal_candidate_summary_v3.json  wurmkickflip_locomotion_terrarium_causal_candidate_warm_start_v3.json  wurmkickflip_locomotion_warm_start_v1.json
training/tests/: test_locomotion_objective_v3.py
training/wurmkickflip_rl/: __init__.py  articulated_locomotion.py  contracts.py  env.py  evolve.py  evolve_locomotion_policy.py  export_policy.py  fixture_observation.py  locomotion_parity_trace.py  replay_schema.py  train.py  train_stunt_policy.py  validate_onnx.py  validate_stunt_policy.py
(+52 files in other folders)
