[project]
name = "wurmkickflip-rl"
version = "0.1.0"
description = "Offline RL training scaffold for the Wurmkickflip browser policy."
requires-python = ">=3.11,<3.12"
dependencies = [
  "gymnasium>=1.2.0",
  "numpy>=2.1.0",
  "onnx>=1.17.0",
  "onnxscript>=0.3.0",
  "stable-baselines3>=2.7.0",
  "torch>=2.5.0",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.uv]
package = true
required-version = "==0.11.8"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [".venv", "runs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = [
  "wurmkickflip_rl/contracts.py",
  "wurmkickflip_rl/env.py",
  "wurmkickflip_rl/evolve_locomotion_policy.py",
  "wurmkickflip_rl/fixture_observation.py",
  "wurmkickflip_rl/locomotion_parity_trace.py",
  "wurmkickflip_rl/replay_schema.py",
  "wurmkickflip_rl/validate_onnx.py",
]
exclude = [".venv", "runs"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]
